--- a/A/pom.xml
+++ b/A/pom.xml
@@ -6,8 +6,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.4</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.7.18</version>
+		<relativePath />
 	</parent>
 	<groupId>com.service.</groupId>
 	<artifactId>A</artifactId>
@@ -28,7 +28,10 @@
 		<url />
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<spring.boot.version>2.7.18</spring.boot.version>
+		<java.version>11</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
@@ -76,6 +79,34 @@
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-spring-boot3</artifactId>
 		</dependency>
+		<!-- Swagger Annotations -->
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>2.2.20</version>
+		</dependency>
+
+		<!-- Nullable types used in OpenAPI models -->
+		<dependency>
+			<groupId>org.openapitools</groupId>
+			<artifactId>jackson-databind-nullable</artifactId>
+			<version>0.2.4</version>
+		</dependency>
+
+		<!-- Javax Annotations -->
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
+		<!-- Javax Validation -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -95,7 +126,7 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<inputSpec>${project.basedir}/src/main/resources/openapi/service2.yaml</inputSpec>
+							<inputSpec>${project.basedir}/src/main/resources/swagger/post-api.yaml</inputSpec>
 							<!-- Use the Spring generator + Spring Cloud (Feign) library -->
 							<generatorName>spring</generatorName>
 							<library>spring-cloud</library>
@@ -114,6 +145,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
