--- a/A/src/main/resources/application.properties
+++ b/A/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 spring.application.name=A
 
-service2:
-  base-url: https://api.service2.internal
+service-b.base-url=https://jsonplaceholder.typicode.com
+serviceBPostClient.url=https://jsonplaceholder.typicode.com
 
-feign:
-  client:
-    config:
-      service2-api-client:
-        connectTimeout: 3000     # ms
-        readTimeout:    5000     # ms
+# feign:
+#   client:
+#     config:
+#       service2-api-client:
+#         connectTimeout: 3000     # ms
+#         readTimeout:    5000     # ms
 
 
-resilience4j:
-  retry:
-    instances:
-      service2:
-        max-attempts: 3
-        wait-duration: 500ms
-  circuitbreaker:
-    instances:
-      service2:
-        sliding-window-size: 10
-        failure-rate-threshold: 50
+# resilience4j:
+#   retry:
+#     instances:
+#       service2:
+#         max-attempts: 3
+#         wait-duration: 500ms
+#   circuitbreaker:
+#     instances:
+#       service2:
+#         sliding-window-size: 10
+#         failure-rate-threshold: 50
