--- a/A/pom.xml
+++ b/A/pom.xml
@@ -3,57 +3,33 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.18</version>
+		<version>3.2.5</version>
 		<relativePath />
 	</parent>
-	<groupId>com.service.</groupId>
+
+	<groupId>com.service</groupId>
 	<artifactId>A</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>A</name>
+	<name>Service A</name>
 	<description>Service A project for Spring Boot Integration</description>
-	<url />
-	<licenses>
-		<license />
-	</licenses>
-	<developers>
-		<developer />
-	</developers>
-	<scm>
-		<connection />
-		<developerConnection />
-		<tag />
-		<url />
-	</scm>
+
 	<properties>
-		<spring.boot.version>2.7.18</spring.boot.version>
-		<java.version>11</java.version>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<java.version>17</java.version>
+		<spring.boot.version>3.2.5</spring.boot.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>${spring.boot.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>2023.0.3</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>io.github.resilience4j</groupId>
-				<artifactId>resilience4j-bom</artifactId>
-				<version>2.0.0</version>
+				<version>2023.0.1</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -61,52 +37,66 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<!-- Core Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Feign Client -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+
+		<!-- Resilience4j -->
 		<dependency>
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-spring-boot3</artifactId>
 		</dependency>
-		<!-- Swagger Annotations -->
+
+		<!-- Swagger/OpenAPI Annotations -->
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-annotations</artifactId>
 			<version>2.2.20</version>
 		</dependency>
 
-		<!-- Nullable types used in OpenAPI models -->
+		<!-- OpenAPI Nullable Support -->
 		<dependency>
 			<groupId>org.openapitools</groupId>
 			<artifactId>jackson-databind-nullable</artifactId>
 			<version>0.2.4</version>
 		</dependency>
 
-		<!-- Javax Annotations -->
+		<!-- Jakarta Annotations & Validation -->
 		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>1.3.2</version>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
 		</dependency>
 
-		<!-- Javax Validation -->
+		<!-- Lombok -->
 		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>2.0.1.Final</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -115,30 +105,50 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
 				<version>6.6.0</version>
 				<executions>
 					<execution>
-						<id>generate-service2-client</id>
+						<id>generate-service-b-post-api-client</id>
 						<goals>
 							<goal>generate</goal>
 						</goals>
 						<configuration>
 							<inputSpec>${project.basedir}/src/main/resources/swagger/post-api.yaml</inputSpec>
-							<!-- Use the Spring generator + Spring Cloud (Feign) library -->
 							<generatorName>spring</generatorName>
 							<library>spring-cloud</library>
-							<!-- Customize the package & client name -->
-							<apiPackage>com.myorg.clients.service2</apiPackage>
-							<modelPackage>com.myorg.clients.service2.model</modelPackage>
+							<apiPackage>com.service.b.clients.post.api</apiPackage>
+							<modelPackage>com.service.b.clients.post.model</modelPackage>
 							<configOptions>
-								<!-- How the Feign client will be named -->
-								<interfaceOnly>true</interfaceOnly>
-								<feignName>Service2ApiClient</feignName>
+								<!-- Generates interfaces & controller impl (for Feign clients) -->
+								<interfaceOnly>false</interfaceOnly>
+
+								<useTags>false</useTags>
+
+								<useFeignClientUrl>true</useFeignClientUrl>
+
+								<!-- Enables support for Java 8 types like `LocalDate`, `Optional` -->
 								<dateLibrary>java8</dateLibrary>
+
+								<!-- Enables generation compatible with Spring Boot 3 -->
+								<useSpringBoot3>true</useSpringBoot3>
+
+								<useFeignClientContextId>true</useFeignClientContextId>
+
+								<title>postSemiClient</title>
+
+								<apiNameSuffix>ClientSuffix</apiNameSuffix>
+
 							</configOptions>
+
+							<!-- 5) AdditionalProperties for name suffix -->
+							<additionalProperties>
+								<!-- Appends 'Client' to generated interfaces, e.g. 'PostClient' -->
+								<apiNameSuffix>ClientS2</apiNameSuffix>
+							</additionalProperties>
 						</configuration>
 					</execution>
 				</executions>
