--- a/A/src/main/resources/swagger/post-api.yaml
+++ b/A/src/main/resources/swagger/post-api.yaml
@@ -2,11 +2,12 @@ openapi: "3.0.0"
 info:
   title: "JSONPlaceholder Post API"
   version: "1.0.0"
-servers:
-  - url: https://jsonplaceholder.typicode.com
+
 paths:
   /posts/{id}:
     get:
+      tags:
+        - ServiceBPostClient
       summary: "Get a post by ID"
       parameters:
         - name: id
